# dummy_interface_example

./: CMakeLists.txt  README.md  main.cpp
include/: dummy_text2text_pipeline.hpp
src/: dummy_text2text_pipeline.cpp
